Add layout structure and styles for sidebar and content area

--- a/index.html
+++ b/index.html
@@ -7,15 +7,71 @@
     <title>Document</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@200..1000&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@200..1000&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="/css/framework.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/all.min.css">
 
 </head>
 
 <body>
-
+    <div class="page d-flex">
+        <div class="sidebar">
+            <h3 class="logo">Aiham</h3>
+            <ul>
+                <li>
+                    <a href="index.html">
+                        <i class="fa fa-file-archive"></i>
+                        Dashboard</a>
+                </li>
+                <li>
+                    <a href="settings.html">
+                        <i class="fa fa-file-archive"></i>
+                        Settings</a>
+                </li>
+                <li>
+                    <a href="profile.html">
+                        <i class="fa fa-user-alt"></i>
+                        Profile</a>
+                </li>
+                <li>
+                    <a href="projects.html">
+                        <i class="fab fa-git-alt"></i>
+                        Projects</a>
+                </li>
+                <li>
+                    <a href="courses.html">
+                        <i class="fa fa-cloud-rain"></i>
+                        Courses</a>
+                </li>
+                <li>
+                    <a href="friends.html">
+                        <i class="fa fa-file-archive"></i>
+                        Friends</a>
+                </li>
+                <li>
+                    <a href="files.html">
+                        <i class="fa fa-file-archive"></i>
+                        Files</a>
+                </li>
+                <li>
+                    <a href="plans.html">
+                        <i class="fa fa-file-archive"></i>
+                        Plans</a>
+                </li>
+            </ul>
+        </div>
+        <div class="content">
+            <div class="header">
+                <input type="search" placeholder="search" name="search">
+                <div class="nav">
+                    <i class="fa fa-bell"></i>
+                    <img src="images/avatar.png" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
