Refactor sidebar styles for better responsiveness and update navigation icons in HTML

--- a/index.html
+++ b/index.html
@@ -22,52 +22,56 @@
             <ul>
                 <li>
                     <a href="index.html">
-                        <i class="fa fa-file-archive"></i>
-                        Dashboard</a>
+                        <i class="far fa-chart-bar fa-fw"></i>
+                        <span>Dashboard</span></a>
                 </li>
                 <li>
                     <a href="settings.html">
-                        <i class="fa fa-file-archive"></i>
-                        Settings</a>
+                        <i class="fas fa-cog"></i>
+                        <span>Settings</span></a>
                 </li>
                 <li>
                     <a href="profile.html">
-                        <i class="fa fa-user-alt"></i>
-                        Profile</a>
+                        <i class="far fa-user"></i>
+                        <span>Profile</span></a>
                 </li>
                 <li>
                     <a href="projects.html">
-                        <i class="fab fa-git-alt"></i>
-                        Projects</a>
+                        <i class="fa fa-project-diagram"></i>
+                        <span>Projects</span></a>
                 </li>
                 <li>
                     <a href="courses.html">
-                        <i class="fa fa-cloud-rain"></i>
-                        Courses</a>
+                        <i class="fa fa-graduation-cap"></i>
+                        <span>Courses</span></a>
                 </li>
                 <li>
                     <a href="friends.html">
-                        <i class="fa fa-file-archive"></i>
-                        Friends</a>
+                        <i class="fa fa-user-circle"></i>
+                        <span>Friends</span></a>
                 </li>
                 <li>
                     <a href="files.html">
-                        <i class="fa fa-file-archive"></i>
-                        Files</a>
+                        <i class="fa fa-file-alt"></i>
+                        <span>Files</span></a>
                 </li>
                 <li>
                     <a href="plans.html">
-                        <i class="fa fa-file-archive"></i>
-                        Plans</a>
+                        <i class="fa fa-credit-card"></i>
+                        <span>Plans</span></a>
                 </li>
             </ul>
         </div>
         <div class="content">
             <div class="header">
-                <input type="search" placeholder="search" name="search">
+                <div class="container">
+                    <label for="search">
+                        <input type="search" placeholder="search" name="search" id="search">
+                    </label>
                 <div class="nav">
                     <i class="fa fa-bell"></i>
                     <img src="images/avatar.png" alt="">
+                </div>
                 </div>
             </div>
         </div>
