Add sidebar navigation and layout structure to multiple HTML files

--- a/courses.html
+++ b/courses.html
@@ -1,11 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@200..1000&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="/css/framework.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/all.min.css">
+
 </head>
+
 <body>
-    <h1>Hi</h1>
+    <div class="page">
+        <div class="sidebar">
+            <h3 class="logo">Aiham</h3>
+            <ul>
+                <li>
+                    <a href="index.html">
+                        <i class="far fa-chart-bar fa-fw"></i>
+                        <span>Dashboard</span></a>
+                </li>
+                <li>
+                    <a href="settings.html">
+                        <i class="fas fa-cog"></i>
+                        <span>Settings</span></a>
+                </li>
+                <li>
+                    <a href="profile.html">
+                        <i class="far fa-user"></i>
+                        <span>Profile</span></a>
+                </li>
+                <li>
+                    <a href="projects.html">
+                        <i class="fa fa-project-diagram"></i>
+                        <span>Projects</span></a>
+                </li>
+                <li>
+                    <a href="courses.html" class="active">
+                        <i class="fa fa-graduation-cap"></i>
+                        <span>Courses</span></a>
+                </li>
+                <li>
+                    <a href="friends.html">
+                        <i class="fa fa-user-circle"></i>
+                        <span>Friends</span></a>
+                </li>
+                <li>
+                    <a href="files.html">
+                        <i class="fa fa-file-alt"></i>
+                        <span>Files</span></a>
+                </li>
+                <li>
+                    <a href="plans.html">
+                        <i class="fa fa-credit-card"></i>
+                        <span>Plans</span></a>
+                </li>
+            </ul>
+        </div>
+        <div class="content">
+            <div class="header">
+                <div class="container">
+                    <label for="search">
+                        <input type="search" placeholder="search" name="search" id="search">
+                    </label>
+                    <div class="nav">
+                        <i class="fa fa-bell"></i>
+                        <img src="images/avatar.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
