--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
 </head>
 
 <body>
-    <div class="page d-flex">
+    <div class="page">
         <div class="sidebar">
             <h3 class="logo">Aiham</h3>
             <ul>
                 <li>
-                    <a href="index.html">
+                    <a href="index.html"  class="active">
                         <i class="far fa-chart-bar fa-fw"></i>
                         <span>Dashboard</span></a>
                 </li>
