--- a/projects.html
+++ b/projects.html
@@ -21,7 +21,7 @@
             <h3 class="logo">Aiham</h3>
             <ul>
                 <li>
-                    <a href="index.html">
+                    <a href="index.html" class="active">
                         <i class="far fa-chart-bar fa-fw"></i>
                         <span>Dashboard</span></a>
                 </li>
@@ -36,7 +36,7 @@
                         <span>Profile</span></a>
                 </li>
                 <li>
-                    <a href="projects.html">
+                    <a href="projects.html" class="active">
                         <i class="fa fa-project-diagram"></i>
                         <span>Projects</span></a>
                 </li>
@@ -46,7 +46,7 @@
                         <span>Courses</span></a>
                 </li>
                 <li>
-                    <a href="friends.html"  class="active">
+                    <a href="friends.html">
                         <i class="fa fa-user-circle"></i>
                         <span>Friends</span></a>
                 </li>
