Enhance layout and styles for main dashboard section, including responsive adjustments and new header elements

--- a/index.html
+++ b/index.html
@@ -74,6 +74,31 @@
                 </div>
                 </div>
             </div>
+            <div class="main-section">
+               <div class="container">
+                   <h1 class="main-header">Dashboard</h1>
+                   <div class="content">
+                      <div class="welcome">
+                        <div class="secondary-header">
+                            <h2>welcome</h2>
+                            <p>Aiham</p>
+                        </div>
+                      </div>
+                      <div class="quick-draft"></div>
+                      <div class="yearly-targets"></div>
+                      <div class="tickets-statistics"></div>
+                      <div class="latest-news"></div>
+                      <div class="latest-tasks"></div>
+                      <div class="top-items"></div>
+                      <div class="latest-uploads"></div>
+                      <div class="projects-progress"></div>
+                      <div class="reminders"></div>
+                      <div class="latest-post"></div>
+                      <div class="social-media"></div>
+                      <div class="projects"></div>
+                   </div>
+               </div>
+            </div>
         </div>
     </div>
 </body>
