--- a/projects.html
+++ b/projects.html
@@ -21,7 +21,7 @@
             <h3 class="logo">Aiham</h3>
             <ul>
                 <li>
-                    <a href="index.html" class="active">
+                    <a href="index.html">
                         <i class="far fa-chart-bar fa-fw"></i>
                         <span>Dashboard</span></a>
                 </li>
