--- a/index.html
+++ b/index.html
@@ -79,23 +79,156 @@
                    <h1 class="main-header">Dashboard</h1>
                    <div class="content">
                       <div class="welcome">
-                        <div class="secondary-header">
+                      				<div class="box-top">
+                      							 <div class="secondary-header">
                             <h2>welcome</h2>
                             <p>Aiham</p>
                         </div>
+                      								<img src="images/welcome.png" class="welcome-image">
+                      								<img src="images/avatar.png" class="welcome-avatar">
+                      				</div>
+                      				<div class="info">
+                      								<div>
+                      												<span>Aiham Jassar</span>
+                      												<span>Developer</span>
+                      								</div>
+                      									<div>
+                      												<span>80</span>
+                      												<span>Projects</span>
+                      								</div>
+                      									<div>
+                      												<span>$8500</span>
+                      												<span>Earned</span>
+                      								</div>
+                      				</div>
+                      				<a href="#">Profile</a>
                       </div>
-                      <div class="quick-draft"></div>
-                      <div class="yearly-targets"></div>
-                      <div class="tickets-statistics"></div>
-                      <div class="latest-news"></div>
-                      <div class="latest-tasks"></div>
-                      <div class="top-items"></div>
-                      <div class="latest-uploads"></div>
-                      <div class="projects-progress"></div>
-                      <div class="reminders"></div>
-                      <div class="latest-post"></div>
-                      <div class="social-media"></div>
-                      <div class="projects"></div>
+                      <div class="quick-draft">
+                      				<div class="secondary-header">
+                            <h2>Quick Draft</h2>
+                            <p>Write A Draft For Your Ideas</p>
+                        </div>
+                      				<form>
+                      								<input type="text" name="title" placeholder="Title">
+                      								<textarea placeholder="Your Thought"></textarea>
+                      								<input type="submit" value="Save">
+                      				</form>
+                      </div>
+                      <div class="yearly-targets">
+                      				<div class="secondary-header">
+                            <h2>Yearly Targets</h2>
+                            <p>Targets Of The Year</p>
+                        </div>
+                      				<div class="box">
+                      								<div class="icon">
+                      												<i class="fas fa-dollar-sign"></i>
+                      								</div>
+                      								<div class="info">
+                      												<span>Money</span>
+                      												<span>$20.000</span>
+                      												<div class="line">
+                      																<span class="progress" data-progress="80%" style="width: 80%;"></span>
+                      												</div>
+                      								</div>
+                      				</div>
+                      				<div class="box">
+                      								<div class="icon">
+                      												<i class="fas fa-code"></i>
+                      								</div>
+                      								<div class="info">
+                      												<span>Projects</span>
+                      												<span>24</span>
+                      												<div class="line">
+                      																<span class="progress" data-progress="55%" style="width: 55%;"></span>
+                      												</div>
+                      								</div>
+                      				</div>
+                      				<div class="box">
+                      								<div class="icon">
+                      												<i class="fas fa-user"></i>
+                      								</div>
+                      								<div class="info">
+                      												<span>Team</span>
+                      												<span>12</span>
+                      												<div class="line">
+                      																<span class="progress" data-progress="75%" style="width: 75%;"></span>
+                      												</div>
+                      								</div>
+                      				</div>
+                      </div>
+                      <div class="tickets-statistics">
+                      				<div class="secondary-header">
+                            <h2>Tickets Satistics</h2>
+                            <p>Everything About Support Tickets</p>
+                        </div>
+                      				<div class="boxes">
+                      								<div class="box">
+                      												<i class="fas fa-tasks"></i>
+                      												<span>2500</span>
+                      												<span>Total</span>
+                      								</div>
+                      								<div class="box">
+                      												<i class="fas fa-spinner"></i>
+                      												<span>500</span>
+                      												<span>Pending</span>
+                      								</div>
+                      								<div class="box">
+                      												<i class="far fa-check-circle"></i>
+                      												<span>1900</span>
+                      												<span>Closed</span>
+                      								</div>
+                      								<div class="box">
+                      												<i class="far fa-times-circle"></i>
+                      												<span>100</span>
+                      												<span>Deleted</span>
+                      								</div>
+                      				</div>
+                      </div>
+                      <div class="latest-news">
+                      				<div class="secondary-header">
+                            <h2>Latest News</h2>
+                        </div>
+                      </div>
+                      <div class="latest-tasks">
+                      				<div class="secondary-header">
+                            <h2>Latest Tasks</h2>
+                        </div>
+                      </div>
+                      <div class="top-items">
+                      				<div class="secondary-header">
+                            <h2>Top Search Items</h2>
+                        </div>
+                      </div>
+                      <div class="latest-uploads">
+                      				<div class="secondary-header">
+                            <h2>Latest Uploads</h2>
+                        </div>
+                      </div>
+                      <div class="projects-progress">
+                      				<div class="secondary-header">
+                            <h2>Latest Projects Progress</h2>
+                        </div>
+                      </div>
+                      <div class="reminders">
+                      				<div class="secondary-header">
+                            <h2>Reminders</h2>
+                        </div>
+                      </div>
+                      <div class="latest-post">
+                      				<div class="secondary-header">
+                            <h2>Latest Post</h2>
+                        </div>
+                      </div>
+                      <div class="social-media">
+                      				<div class="secondary-header">
+                            <h2>Social Media Stats</h2>
+                        </div>
+                      </div>
+                      <div class="projects">
+                      				<div class="secondary-header">
+                            <h2>Projects</h2>
+                        </div>
+                      </div>
                    </div>
                </div>
             </div>
