Refactor CSS styles for improved layout and responsiveness, including adjustments to font sizes, padding, and grid configurations

--- a/index.html
+++ b/index.html
@@ -380,32 +380,178 @@
                   <h2>Latest Projects Progress</h2>
                 </div>
                 <div class="box">
-                    <p class="done">Got The Project</p>
-                    <p class="done">Started The Project</p>
-                    <p class="done">The Project About To Finish</p>
-                    <p class="current-phase">Test The Project</p>
-                    <p>Finish The Project & Get Money</p>
+                    <p><span class="done"></span>Got The Project</p>
+                    <p><span class="done"></span>Started The Project</p>
+                    <p><span class="done"></span>The Project About To Finish</p>
+                    <p><span class="current-phase"></span>Test The Project</p>
+                    <p><span></span>Finish The Project & Get Money</p> 
                 </div>
+                <img src="images/project.png" alt="">
               </div>
               <div class="reminders">
                 <div class="secondary-header">
                   <h2>Reminders</h2>
+                </div>
+                <div class="box">
+                  <h4>Check My Tasks List</h4>
+                  <span>28/09/2022 - 12:00am</span>
+                </div>
+                <div class="box">
+                  <h4>Check My Projects</h4>
+                  <span>26/10/2022 - 12:00am</span>
+                </div>
+                <div class="box">
+                  <h4>Call All My Clients</h4>
+                  <span>05/11/2022 - 12:00am</span>
+                </div>
+                <div class="box">
+                  <h4>Finish The Development Workshop</h4>
+                  <span>20/12/2022 - 12:00am</span>
                 </div>
               </div>
               <div class="latest-post">
                 <div class="secondary-header">
                   <h2>Latest Post</h2>
                 </div>
+                <div class="info">
+                  <img src="images/avatar.png" alt="">
+                  <div class="text">
+                    <h4>Aiham Jassar</h4>
+                    <span>About 3 Hours Ago</span>
+                  </div>
+                </div>
+                <p>
+                  You can fool all of the people some of the time, and some of the people all of the time, but you can't fool all of the people all of the time.
+                </p>
+                <div class="box">
+                  <span>
+                    <i class="far fa-heart"></i>
+                    1.8k
+                  </span>
+                  <span>
+                    <i class="far fa-comments"></i>
+                    500
+                  </span>
+                </div>
               </div>
               <div class="social-media">
                 <div class="secondary-header">
                   <h2>Social Media Stats</h2>
+                </div>
+                <div class="box">
+                  <i class="fab fa-twitter fa-2x"></i>
+                  <div class="inner-box">
+                    <span>90K Followers</span>
+                    <a href="#">Follow</a>
+                  </div>
+                </div>
+                <div class="box">
+                  <i class="fab fa-facebook-f fa-2x"></i>
+                  <div class="inner-box">
+                    <span>2M Like</span>
+                    <a href="#">Like</a>
+                  </div>
+                </div>
+                <div class="box">
+                  <i class="fab fa-youtube fa-2x"></i>
+                  <div class="inner-box">
+                    <span>1M Subs</span>
+                    <a href="#">Subscribe</a>
+                  </div>
+                </div>
+                <div class="box">
+                  <i class="fab fa-linkedin fa-2x"></i>
+                  <div class="inner-box">
+                    <span>70K Followers</span>
+                    <a href="#">Follow</a>
+                  </div>
                 </div>
               </div>
               <div class="projects">
                 <div class="secondary-header">
                   <h2>Projects</h2>
                 </div>
+                <table>
+                  <tr>
+                    <td>Name</td>
+                    <td>Finish Date</td>
+                    <td>Client</td>
+                    <td>Price</td>
+                    <td>Team</td>
+                    <td>Status</td>
+                  </tr>
+                  <tr>
+                    <td>Ministry Wikipedia</td>
+                    <td>10 May 2022</td>
+                    <td>Ministry</td>
+                    <td>$5300</td>
+                    <td>
+                      <img src="images/team-01.png" alt="">
+                      <img src="images/team-02.png" alt="">
+                      <img src="images/team-03.png" alt="">
+                      <img src="images/team-04.png" alt="">
+                    </td>
+                    <td>Pending</td>
+                  </tr>
+                  <tr>
+                    <td>Bouba App</td>
+                    <td>05 Sep 2021</td>
+                    <td>Bouba</td>
+                    <td>$800</td>
+                    <td>
+                      <img src="images/team-02.png" alt="">
+                      <img src="images/team-04.png" alt="">
+                    </td>
+                    <td>Completed</td>
+                  </tr>
+                  <tr>
+                    <td>Mahmoud Website</td>
+                    <td>22 May 2021</td>
+                    <td>Mahmoud</td>
+                    <td>$600</td>
+                    <td>
+                      <img src="images/team-01.png" alt="">
+                      <img src="images/team-02.png" alt="">
+                    </td>
+                    <td>Completed</td>
+                  </tr>
+                  <tr>
+                    <td>Sayed Website</td>
+                    <td>24 May 2021</td>
+                    <td>Sayed</td>
+                    <td>$300</td>
+                    <td>
+                      <img src="images/team-01.png" alt="">
+                      <img src="images/team-05.png" alt="">
+                    </td>
+                    <td>Rejected</td>
+                  </tr>
+                  <tr>
+                    <td>Arena Application</td>
+                    <td>01 Mar 2021</td>
+                    <td>Arena Company</td>
+                    <td>$2800</td>
+                    <td>
+                      <img src="images/team-01.png" alt="">
+                      <img src="images/team-02.png" alt="">
+                      <img src="images/team-04.png" alt="">
+                      <img src="images/team-05.png" alt="">
+                    </td>
+                    <td>Completed</td>
+                  </tr>
+                  <tr>
+                    <td>Elzero Shop</td>
+                    <td>12 Oct 2021</td>
+                    <td>Elzero Company</td>
+                    <td>$1500</td>
+                    <td>
+                      <img src="images/team-01.png" alt="">
+                      <img src="images/team-02.png" alt="">
+                      <img src="images/team-04.png" alt="">
+                    </td>
+                    <td>In Progress</td>
+                  </tr>
+                </table>
               </div>
             </div>
           </div>
