--- a/index.html
+++ b/index.html
@@ -471,87 +471,89 @@
                 <div class="secondary-header">
                   <h2>Projects</h2>
                 </div>
-                <table>
-                  <tr>
-                    <td>Name</td>
-                    <td>Finish Date</td>
-                    <td>Client</td>
-                    <td>Price</td>
-                    <td>Team</td>
-                    <td>Status</td>
-                  </tr>
-                  <tr>
-                    <td>Ministry Wikipedia</td>
-                    <td>10 May 2022</td>
-                    <td>Ministry</td>
-                    <td>$5300</td>
-                    <td>
-                      <img src="images/team-01.png" alt="">
-                      <img src="images/team-02.png" alt="">
-                      <img src="images/team-03.png" alt="">
-                      <img src="images/team-04.png" alt="">
-                    </td>
-                    <td>Pending</td>
-                  </tr>
-                  <tr>
-                    <td>Bouba App</td>
-                    <td>05 Sep 2021</td>
-                    <td>Bouba</td>
-                    <td>$800</td>
-                    <td>
-                      <img src="images/team-02.png" alt="">
-                      <img src="images/team-04.png" alt="">
-                    </td>
-                    <td>Completed</td>
-                  </tr>
-                  <tr>
-                    <td>Mahmoud Website</td>
-                    <td>22 May 2021</td>
-                    <td>Mahmoud</td>
-                    <td>$600</td>
-                    <td>
-                      <img src="images/team-01.png" alt="">
-                      <img src="images/team-02.png" alt="">
-                    </td>
-                    <td>Completed</td>
-                  </tr>
-                  <tr>
-                    <td>Sayed Website</td>
-                    <td>24 May 2021</td>
-                    <td>Sayed</td>
-                    <td>$300</td>
-                    <td>
-                      <img src="images/team-01.png" alt="">
-                      <img src="images/team-05.png" alt="">
-                    </td>
-                    <td>Rejected</td>
-                  </tr>
-                  <tr>
-                    <td>Arena Application</td>
-                    <td>01 Mar 2021</td>
-                    <td>Arena Company</td>
-                    <td>$2800</td>
-                    <td>
-                      <img src="images/team-01.png" alt="">
-                      <img src="images/team-02.png" alt="">
-                      <img src="images/team-04.png" alt="">
-                      <img src="images/team-05.png" alt="">
-                    </td>
-                    <td>Completed</td>
-                  </tr>
-                  <tr>
-                    <td>Elzero Shop</td>
-                    <td>12 Oct 2021</td>
-                    <td>Elzero Company</td>
-                    <td>$1500</td>
-                    <td>
-                      <img src="images/team-01.png" alt="">
-                      <img src="images/team-02.png" alt="">
-                      <img src="images/team-04.png" alt="">
-                    </td>
-                    <td>In Progress</td>
-                  </tr>
-                </table>
+                <div class="box">
+                  <table>
+                    <tr>
+                      <td>Name</td>
+                      <td>Finish Date</td>
+                      <td>Client</td>
+                      <td>Price</td>
+                      <td>Team</td>
+                      <td>Status</td>
+                    </tr>
+                    <tr>
+                      <td>Ministry Wikipedia</td>
+                      <td>10 May 2022</td>
+                      <td>Ministry</td>
+                      <td>$5300</td>
+                      <td>
+                        <img src="images/team-01.png" alt="">
+                        <img src="images/team-02.png" alt="">
+                        <img src="images/team-03.png" alt="">
+                        <img src="images/team-04.png" alt="">
+                      </td>
+                      <td><span class="pending">Pending</span></td>
+                    </tr>
+                    <tr>
+                      <td>Bouba App</td>
+                      <td>05 Sep 2021</td>
+                      <td>Bouba</td>
+                      <td>$800</td>
+                      <td>
+                        <img src="images/team-02.png" alt="">
+                        <img src="images/team-04.png" alt="">
+                      </td>
+                      <td><span class="completed">Completed</span></td>
+                    </tr>
+                    <tr>
+                      <td>Mahmoud Website</td>
+                      <td>22 May 2021</td>
+                      <td>Mahmoud</td>
+                      <td>$600</td>
+                      <td>
+                        <img src="images/team-01.png" alt="">
+                        <img src="images/team-02.png" alt="">
+                      </td>
+                      <td><span class="completed">Completed</span></td>
+                    </tr>
+                    <tr>
+                      <td>Sayed Website</td>
+                      <td>24 May 2021</td>
+                      <td>Sayed</td>
+                      <td>$300</td>
+                      <td>
+                        <img src="images/team-01.png" alt="">
+                        <img src="images/team-05.png" alt="">
+                      </td>
+                      <td><span class="rejected">Rejected</span></td>
+                    </tr>
+                    <tr>
+                      <td>Arena Application</td>
+                      <td>01 Mar 2021</td>
+                      <td>Arena Company</td>
+                      <td>$2800</td>
+                      <td>
+                        <img src="images/team-01.png" alt="">
+                        <img src="images/team-02.png" alt="">
+                        <img src="images/team-04.png" alt="">
+                        <img src="images/team-05.png" alt="">
+                      </td>
+                      <td><span class="completed">Completed</span></td>
+                    </tr>
+                    <tr>
+                      <td>Elzero Shop</td>
+                      <td>12 Oct 2021</td>
+                      <td>Elzero Company</td>
+                      <td>$1500</td>
+                      <td>
+                        <img src="images/team-01.png" alt="">
+                        <img src="images/team-02.png" alt="">
+                        <img src="images/team-04.png" alt="">
+                      </td>
+                      <td><span class="in-progress">In Progress</span></td>
+                    </tr>
+                  </table>
+                </div>
               </div>
             </div>
           </div>
